# mlir-tensor-compiler-llvm

./: .gitignore  CMakeLists.txt  README.md
docs/: 01-tensor-and-linalg.md  02-bufferization.md  03-linalg-to-loops.md  04-affine-and-control-flow.md  05-llvm-conversion.md  06-fusion.md  07-tiling.md  08-vectorization.md  09-native-execution.md  10-custom-dialect.md
examples/: conv2d.mlir  conv2d_main.mlir  elementwise_add.mlir  elementwise_add_main.mlir  fused_relu_add.mlir  fused_relu_add_main.mlir  matmul.mlir  matmul_main.mlir  reduce_rows.mlir  reduce_rows_main.mlir  tiled_fused_relu_add.mlir  tiled_fused_relu_add_main.mlir  tiled_matmul.mlir  tiled_matmul_main.mlir  ttensor_relu_add.mlir  ttensor_relu_add_main.mlir  vectorized_matmul.mlir  vectorized_matmul_main.mlir
include/TTensor/: CMakeLists.txt  Passes.h  TTensorOps.h  TTensorOps.td
lib/TTensor/: CMakeLists.txt  ConvertTTensorToLinalg.cpp  TTensorDialect.cpp
scripts/: build_native_example.sh  run_jit_example.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Driver/: load-tensor-ir.mlir  load-ttensor-ir.mlir
test/Lowering/: bufferization.mlir  conv2d-to-loops.mlir  elementwise-add-to-llvm.mlir  elementwise-add-to-loops.mlir  fused-relu-add-fusion.mlir  fused-relu-add-to-llvm.mlir  matmul-to-loops.mlir  reduce-rows-to-llvm.mlir  reduce-rows-to-loops.mlir  tiled-fused-relu-add-fusion.mlir  tiled-matmul-tiling.mlir  tiled-matmul-to-llvm.mlir  ttensor-relu-add-to-linalg.mlir  ttensor-relu-add-to-llvm.mlir  vectorized-matmul-to-llvm.mlir  vectorized-matmul-vectorization.mlir
tools/tensor-pipeline-opt/: CMakeLists.txt  tensor-pipeline-opt.cpp
